<resources>
    <string name="app_name">Unsplash</string>
    <string name="fpd_toolbar_title">Photo details</string>
    <string name="fpd_text_camera">Камера</string>
    <string name="fpd_text_focus">Фокусное растояние</string>
    <string name="fpd_text_iso">ISO</string>
    <string name="fg_toolbar_title">Photo</string>
    <string name="fg_text_aperture">Апертура</string>
    <string name="fg_text_exposition">Экспозиция</string>
    <string name="fg_text_resolution">Разрешение</string>
    <string name="fpd_text_number_of_view">Просмотров</string>
    <string name="fpd_text_number_of_downlands">Скачиваний</string>
    <string name="fpd_text_number_of_likes">Лайков</string>
    <string name="network_is_disconnected_text">Ошибка интернет соединения</string>
    <string name="network_is_connected_text">Обнаружено интернет соединение</string>
    <string name="error_access_text">Для загрузки требуется подтвердить доступ</string>
    <string name="unknown_text">Неизвестно</string>
    <string name="start_of_the_download_text">Загрузка началась</string>
    <string name="pf_text_photo">Фотографии</string>
    <string name="pf_text_likes">Лайков</string>
    <string name="pf_text_collection">Коллекции</string>
    <string name="fs_text_users">Пользователи</string>
    <string name="auth_text">Авторизация</string>
    <string name="order_by_latest_text">Сначала новые</string>
    <string name="order_by_oldest_text">Сначала старые</string>
    <string name="order_by_popular_text">Популярные</string>
    <string name="order_dialog_text">Сортировать</string>
    <string name="fc_toolbar_title">Коллекции</string>
    <string name="fp_toolbar_title">Фото</string>
    <string name="fs_search_text">Поиск</string>
    <string name="unsplash_join_url">https://unsplash.com/join</string>
    <string name="fuc_list_collection_text">Список коллекций пуст</string>
    <string name="fuc_list_photo_text">Список фотографий пуст</string>
    <string name="no_photos_available">Нет доступных фото</string>

    <array name="sort">
        <item>Сначала новые</item>
        <item>Сначала старые</item>
        <item>Популярные</item>
    </array>

    <string name="order_by_latest">Последние</string>
    <string name="order_by_relevant">Актуальность</string>

    <string name="content_filter_high">Максимальный</string>
    <string name="content_filter_low">Минимальный</string>


    <string name="color_all">Любые</string>
    <string name="color_black_and_white">Черно-белые</string>
    <string name="color_black">Черные</string>
    <string name="color_white">Белые</string>
    <string name="color_yellow">Желытые</string>
    <string name="color_orange">Оранжевые</string>
    <string name="color_red">Красные</string>
    <string name="color_purple">Фиолетовые</string>
    <string name="color_magenta">Пурпурные</string>
    <string name="color_green">Зеленые</string>
    <string name="color_teal">Бирюзовые</string>
    <string name="color_blue">Синие</string>


    <string name="orientation_ALL"> Любая</string>
    <string name="orientation_landscape">Альбомная</string>
    <string name="orientation_portrait">Портретная</string>
    <string name="orientation_squarish">Квадратная</string>
    <string name="retry_text">Повторить попытку</string>

</resources>