<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/order_dialog_text"
        android:textColor="#000"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_order_by_latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_latest_text" />

        <RadioButton
            android:id="@+id/rb_order_by_oldest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_oldest_text" />

        <RadioButton
            android:id="@+id/rb_order_by_popular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_by_popular_text" />


    </RadioGroup>

</LinearLayout>


