<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fpdToolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:title="@string/fpd_toolbar_title"
        app:navigationIcon="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/fpdClContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fpdImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/plant5" />

            <TextView
                android:id="@+id/fpdLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/fpdImage"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="location" />

            <ImageView
                android:id="@+id/fpdProfileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fpdImage"
                tools:src="@color/black" />

            <TextView
                android:id="@+id/fpdUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_name"
                app:layout_constraintBottom_toBottomOf="@id/fpdProfileImage"
                app:layout_constraintStart_toEndOf="@id/fpdProfileImage"
                app:layout_constraintTop_toTopOf="@id/fpdProfileImage"
                tools:text="Name" />


            <ImageView
                android:id="@+id/fpdBtnFavorite"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="@dimen/margin_24"
                android:src="@drawable/baseline_bookmark_border_24"
                app:layout_constraintBottom_toBottomOf="@id/fpdProfileImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fpdProfileImage" />

            <ImageView
                android:id="@+id/fpdBtnLike"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="@dimen/margin_16"
                android:src="@drawable/baseline_favorite_border_24"
                app:layout_constraintEnd_toStartOf="@id/fpdBtnFavorite"
                app:layout_constraintTop_toTopOf="@id/fpdBtnFavorite" />

            <ImageView
                android:id="@+id/fpdBtnDownland"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="@dimen/margin_16"
                android:src="@drawable/baseline_download_24"
                app:layout_constraintEnd_toStartOf="@id/fpdBtnLike"
                app:layout_constraintTop_toTopOf="@+id/fpdBtnLike" />

            <View
                android:id="@+id/fpdLine1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/fpdProfileImage" />

            <TextView
                android:id="@+id/fpdTvCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fpd_text_camera"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/fpdLine1"
                app:layout_constraintTop_toBottomOf="@id/fpdLine1" />

            <TextView
                android:id="@+id/fpdTvCameraInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@id/fpdTvCamera"
                app:layout_constraintTop_toBottomOf="@id/fpdTvCamera"
                tools:text="Неизвестно" />

            <TextView
                android:id="@+id/fpdTvFocus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fpd_text_focus"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/fpdLine1"
                app:layout_constraintTop_toBottomOf="@id/fpdTvCameraInfo" />

            <TextView
                android:id="@+id/fpdTvFocusInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@id/fpdTvFocus"
                app:layout_constraintTop_toBottomOf="@id/fpdTvFocus"
                tools:text="Неизвестно" />


            <TextView
                android:id="@+id/fpdTvIso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fpd_text_iso"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/fpdTvFocusInfo"
                app:layout_constraintTop_toBottomOf="@id/fpdTvFocusInfo" />

            <TextView
                android:id="@+id/fpdTvIsoInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@id/fpdTvIso"
                app:layout_constraintTop_toBottomOf="@id/fpdTvIso"
                tools:text="Неизвестно" />

            <TextView
                android:id="@+id/fpdTvAperture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="100dp"
                android:text="@string/fg_text_aperture"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/fpdLine1"
                app:layout_constraintTop_toBottomOf="@id/fpdLine1" />

            <TextView
                android:id="@+id/fpdTvApertureInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@id/fpdTvAperture"
                app:layout_constraintTop_toBottomOf="@id/fpdTvAperture"
                tools:text="Неизвестно" />

            <TextView
                android:id="@+id/fpdTvExposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fg_text_exposition"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/fpdTvApertureInfo"
                app:layout_constraintTop_toBottomOf="@id/fpdTvApertureInfo" />

            <TextView
                android:id="@+id/fpdTvExpositionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@id/fpdTvExposition"
                app:layout_constraintTop_toBottomOf="@id/fpdTvExposition"
                tools:text="Неизвестно" />

            <TextView
                android:id="@+id/fpdTvResolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fg_text_resolution"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/fpdTvExpositionInfo"
                app:layout_constraintTop_toBottomOf="@id/fpdTvExpositionInfo" />

            <TextView
                android:id="@+id/fpdTvResolutionInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintStart_toStartOf="@id/fpdTvResolution"
                app:layout_constraintTop_toBottomOf="@id/fpdTvResolution"
                tools:text="Неизвестно" />

            <View
                android:id="@+id/fpdLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/fpdTvIsoInfo" />

            <TextView
                android:id="@+id/fpdTvNumberOfView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fpd_text_number_of_view"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/fpdTvNumberOfDownland"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fpdLine2" />

            <TextView
                android:id="@+id/fpdTvNumberOfViewInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@id/fpdTvNumberOfView"
                app:layout_constraintStart_toStartOf="@id/fpdTvNumberOfView"
                app:layout_constraintTop_toBottomOf="@id/fpdTvNumberOfView"
                tools:text="View info" />

            <TextView
                android:id="@+id/fpdTvNumberOfDownland"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fpd_text_number_of_downlands"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/fpdTvNumberOfLikes"
                app:layout_constraintStart_toEndOf="@id/fpdTvNumberOfView"
                app:layout_constraintTop_toBottomOf="@id/fpdLine2" />

            <TextView
                android:id="@+id/fpdTvNumberOfDownlandInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@id/fpdTvNumberOfDownland"
                app:layout_constraintStart_toStartOf="@id/fpdTvNumberOfDownland"
                app:layout_constraintTop_toBottomOf="@id/fpdTvNumberOfDownland"
                tools:text="Downlands info" />

            <TextView
                android:id="@+id/fpdTvNumberOfLikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:text="@string/fpd_text_number_of_likes"
                android:textColor="@color/grey"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fpdTvNumberOfDownland"
                app:layout_constraintTop_toBottomOf="@id/fpdLine2" />

            <TextView
                android:id="@+id/fpdTvNumberOfLikesInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_grey"
                app:layout_constraintEnd_toEndOf="@id/fpdTvNumberOfLikes"
                app:layout_constraintStart_toStartOf="@id/fpdTvNumberOfLikes"
                app:layout_constraintTop_toBottomOf="@id/fpdTvNumberOfLikes"
                tools:text="Likes info" />

            <View
                android:id="@+id/fpdLine3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/fpdTvNumberOfViewInfo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fpdRvListTags"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/fpdLine3"
                tools:itemCount="5"
                tools:listitem="@layout/item_tags" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
